# research-experiments

./: .gitignore  README.md
Autodef/: CMakeLists.txt  main.cpp
Autodef/cmake/: CMakeCache.txt  FindGauss.cmake
box-auto-enc/: Pendulums.ipynb  Untitled.ipynb  anim.py  animation_model.py  boxes.py  double pendulum.py  experiment book.ipynb  explore_model.py  join_gifs  keras-learn.py  keras_autoencoder.py  keras_learn.py  learn_simple.py  learn_sin.py  my-nn-learn.py  nn.py  pendulum_learn.py  pendulum_learn_hyperas.py  pendulum_learn_stacked.py  pendulum_sim.py  pendulums.py  sim_anim1.py  sim_anim_explicit_transform.py  sim_by_optimization.py
box-auto-enc/models/: 02 11PM July 28 2017.h5  03 51PM July 31 2017.h5  04 14PM August 15 2017.h5  04 22PM August 28 2017.h5  04 23PM August 28 2017.h5  04 24PM August 28 2017.h5  04 30PM August 28 2017.h5  04 33PM August 28 2017.h5  04 34PM August 28 2017.h5  04 39PM August 28 2017.h5  04 40PM August 28 2017.h5  04 41PM August 28 2017.h5  04 42PM August 28 2017.h5  04 44PM August 28 2017.h5  04 45PM August 28 2017.h5  04 52PM August 28 2017.h5  05 13PM August 28 2017.h5  05 14PM August 28 2017.h5  05 15PM August 28 2017.h5  05 16PM August 28 2017.h5  05 17PM August 28 2017.h5  (+41 more)
deformation/: Untitled.ipynb  learn_mesh.py
mass-spring/: configurations  full_space_sim.py  gplc_pca.py  learning.py  mass-spring-bar-configurations_sim-params.txt  pca.py  pca_ae_learn.py  pca_ae_sim.py  play.py  profile  pure_minimization_sim.py  reduced_space_sim.py  sim.py  sim_different_constraint.py  training.ipynb  viz.py
(+4 files in other folders)
